# oneprot

./: .gitignore  README.md  collect_embeddings.sbatch  create_msa_data.py  enzymes_collect.sbatch  enzymes_fit.sbatch  esm_baseline_collect.sbatch  esm_baseline_fit.sbatch  esm_fit.py  esm_saprot_collect.sbatch  esm_unaligned.py  eval_oneprot_ddp.sbatch  pyproject.toml  requirements.txt  saprot_collect.sbatch  saprot_fit.sbatch  saprot_fit_mlp.sbatch  start_training_chain.sh  train_oneprot_ddp.sbatch
configs/: collect_embeddings.yaml  downstream.yaml  esm_saprot.yaml  esm_saprot_topenzyme.yaml  eval.yaml  saprot.yaml  saprot_mlp.yaml  saprot_sweep_xgboost_cls.yaml  saprot_sweep_xgboost_reg.yaml  train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/classifier/: gradient_boosted_classifier.yaml  knn.yaml  knn_large.yaml  logistic_regression.yaml  mlp.yaml  random_forest.yaml  rf_large.yaml  svm.yaml  xgboost.yaml
configs/data/: oneprot.yaml  oneprot_collate.yaml  oneprot_finetune.yaml
configs/data/modalities/: msa.yaml  pocket.yaml  seqsim.yaml  seqsim_msa.yaml  struct_graph.yaml  struct_token.yaml  text.yaml
configs/downstream_model/: xgboost_cls.yaml
configs/experiment/: example_collate_ddp.yaml  example_collate_ddp_large.yaml  example_cpu.yaml  train_ddp.yaml  train_ddp_1.yaml  train_ddp_1_booster.yaml  train_ddp_2.yaml  train_ddp_2_booster.yaml  train_ddp_3.yaml  train_ddp_3_booster.yaml  train_ddp_booster.yaml  train_ddp_finetune.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/model/: .network_text.yaml.swp  network.yaml  network_msa.yaml  network_pocket.yaml  network_pocket_structure.yaml  network_pocket_structure_msa.yaml  network_pocket_structure_text.yaml  network_pocket_structure_text_1d_cls.yaml  network_pocket_structure_text_msa.yaml  network_structure.yaml  network_structure_large.yaml  network_structure_msa.yaml  network_structure_msa_text.yaml  network_structure_text.yaml  network_text.yaml  oneprot.yaml  oneprot_1.yaml  oneprot_2.yaml  oneprot_3.yaml  oneprot_finetune.yaml
configs/model/components/: msa.yaml  pocket.yaml  sequence.yaml  struct_graph.yaml  struct_token.yaml  (+1 more)
configs/paths/: default.yaml
configs/regressor/: gradient_boosting_regressor.yaml  lasso_regression.yaml  linear_regression.yaml  random_forest_regressor.yaml  ridge_regression.yaml
configs/trainer/: ddp.yaml  default.yaml
notebooks/: unimol_pocket_experiments.ipynb
notebooks/tutorials/: chemical_weights.csv
oneprot/configs/: saprot_sweep_xgboost_cls.yaml  saprot_sweep_xgboost_reg.yaml
src/: collect_embeddings.py  combine_embeddings.py  enzymes_collect.py  enzymes_fit.py  esm_fit.py  esm_saprot_collect.py  esm_saprot_topenzyme.py  esm_unaligned.py  eval.py  lmdb_csv_converter.py  saprot_collect.py  saprot_fit.py  saprot_fit_cls.py  saprot_fit_mlp.py  saprot_fit_reg.py  train.py
src/data/: oneprot_datamodule.py  oneprot_datamodule_collate.py  oneprot_datamodule_finetune.py
src/models/: oneprot_module.py  oneprot_module_finetune.py
src/utils/: __init__.py  downstream.py  downstream_utils.py  utils.py
(+62 files in other folders)
